# GuardX

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hepta/guardx/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GuardX.cpp  artmethod_native_hook.cpp  checkNative.cpp  checkNative.h  jni-dropbear.c
app/src/main/cpp/customSshd/: CMakeLists.txt  jni-dropbear.c
app/src/main/cpp/customSshd/dropbear/: .gitignore
app/src/main/cpp/customSshd/dropbear/src/: options.h
app/src/main/cpp/davilkRuntime/: CMakeLists.txt  FilterClassesVisitor.cpp  FilterClassesVisitor.h  LookupClassesVisitor.cpp  LookupClassesVisitor.h  RuntimePart.cpp  RuntimePart.h  Util.h  art_method.h  davilkRuntime.cpp  davilkRuntime.h  elf_symbol_resolver.h
app/src/main/cpp/davilkRuntime/runtime/: class_linker.h  dex_file.h  obj_ptr-inl.h  obj_ptr.h
app/src/main/cpp/davilkRuntime/runtime/mirror/: array.h  class.cpp  class.h  class_ext.h  class_loader.h  dex_cache.h  iftable.h  object.h  object_array.h  string.h  throwable.h
app/src/main/cpp/lsplt/: CMakeLists.txt
app/src/main/cpp/pty/: CMakeLists.txt  main.cpp
app/src/main/cpp/soInfo/: CMakeLists.txt  soinfo.cpp  soinfo.h
app/src/main/java/com/hepta/guardx/: DropbearUtil.java  GuardXApp.java  MainActivity.java  NativeUtil.java  Prefs.java  ServiceViewModel.java  SshdActivity.java  SshdService.java  SshdSettings.java
app/src/main/java/com/hepta/guardx/Tool/: ClassCheckItem.java  ClassLoaderListItem.java  DeviceInfoItem.java  ItemBean.java  MountItem.java  OpenDeepLinkItem.java  RecyclerViewAdapter.java  RunningAppItem.java  SShdItem.java  SoInfoCheckItem.java  ToolsActivity.java  httpsProxyItem.java  lspltItem.java
app/src/main/java/com/hepta/guardx/Tool/Sshd/: DropbearUtil.java  Prefs.java  ServiceViewModel.java  SshdActivity.java  SshdService.java  SshdSettings.java
app/src/main/java/com/hepta/guardx/Tool/base/: ItemBean.java  ItemCardBean.java  ItemInfoBean.java  RecyclerViewAdapter.java  RecyclerViewCardAdapter.java  RecyclerViewInfoAdapter.java
app/src/main/java/com/hepta/guardx/Tool/deviceInfo/: DeviceInfoActivity.java  MEID.java  MRDID.java  OAID.java
app/src/main/java/com/hepta/guardx/Tool/utils/: MRDID.java  NativeUtil.java  OkHttpClientUtil.java
app/src/main/res/drawable/: forward.xml
app/src/main/res/layout/: activity_sshd.xml  activity_tools.xml  item_card_view.xml  item_info_view.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hepta/guardx/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
